--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     
     <script>
     	// A special key for your Mapbox account.  *** Paste the Access Token from Mapbox Studio below:
-    	mapboxgl.accessToken = 'pk.eyJ1IjoibWF0aWtpbjkiLCJhIjoiYjMyMjBjZTE4NWUxMDkxOWZjZjFjZWEzZTcxNDUxOTkifQ._ldFl3e17jCs7aWm6zMZ3Q';
+    	mapboxgl.accessToken = 'pk.eyJ1Ijoib3JiaXRvciIsImEiOiJjaWpxYWUxMGIwMW82dTJrb3k1b29weHc3In0.Yx6FP-xGMyPGd9ZnkHgolw';
       
       // Let's create our map and give it some default settings:
       var map = new mapboxgl.Map({
           // The ID of the container we're using for our map (from the HTML above):
           container: 'myMap', 
           // The location of your style.  *** Paste the Style URL from Mapbox Studio below:
-          style: 'mapbox://styles/matikin9/cj1omitxc001y2ro9v9g19hsi', 
+          style: 'mapbox://styles/orbitor/cj1pswkus002j2rqjo8y1g4eq', 
           // The starting position your map will be centered around as [latitude, longitude] coordinates.  Currently set to Los Angeles.
           center: [-118.251, 34.047], 
           // The starting zoom level - larger numbers zoom in, smaller numbers zoom out.
